Remove noSpawn instances

--- a/Resources/Prototypes/_NF/Entities/Clothing/Head/softsuit-helmets.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/Head/softsuit-helmets.yml
@@ -572,7 +572,7 @@
   parent: ClothingHeadEVAHelmetBase
   id: ClothingHeadEVAHelmetLvhi
   name: lvhi EVA helmet
-  noSpawn: true
+  categories: [ HideSpawnMenu ]
   components:
   - type: Sprite
     sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
@@ -598,7 +598,7 @@
   parent: ClothingHeadEVAHelmetBase
   id: ClothingHeadEVAHelmetArcadia
   name: arcadia EVA helmet
-  noSpawn: true
+  categories: [ HideSpawnMenu ]
   components:
   - type: Sprite
     sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
