--- a/Resources/Prototypes/_NF/Entities/Structures/Storage/Closets/wall_lockers_department_eva.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Storage/Closets/wall_lockers_department_eva.yml
@@ -507,7 +507,7 @@
       map: ["enum.LockVisualLayers.Lock"]
 
 - type: entity
-  noSpawn: true # debloat spawn menu
+  categories: [ HideSpawnMenu ] # debloat spawn menu
   id: LockerWallEVAColorEmergency
   parent: LockerWallColorBase
   name: emergency EVA wall locker
@@ -534,7 +534,7 @@
 
 # Player Factions
 - type: entity
-  noSpawn: true # debloat spawn menu
+  categories: [ HideSpawnMenu ] # debloat spawn menu
   id: LockerWallEVAColorLvhi
   parent: LockerWallColorBase
   name: LVHI EVA wall locker
