--- a/Resources/Prototypes/_NF/Entities/Structures/Storage/Closets/wall_lockers.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Storage/Closets/wall_lockers.yml
@@ -43,7 +43,7 @@
 
 # Fuel / materials storage
 - type: entity
-  noSpawn: true # debloat spawn menu
+  categories: [ HideSpawnMenu ] # debloat spawn menu
   id: LockerWallColorFuelPlasma
   parent: LockerWallColorBase
   name: plasma fuel wall locker
@@ -69,7 +69,7 @@
       map: ["enum.LockVisualLayers.Lock"]
 
 - type: entity
-  noSpawn: true # debloat spawn menu
+  categories: [ HideSpawnMenu ] # debloat spawn menu
   id: LockerWallColorUranium
   parent: LockerWallColorBase
   name: uranium fuel wall locker
@@ -94,7 +94,7 @@
       map: ["enum.LockVisualLayers.Lock"]
 
 - type: entity
-  noSpawn: true # debloat spawn menu
+  categories: [ HideSpawnMenu ] # debloat spawn menu
   id: LockerWallColorWelding
   parent: LockerWallColorBase
   name: welding fuel wall locker
@@ -120,7 +120,7 @@
       map: ["enum.LockVisualLayers.Lock"]
 
 - type: entity
-  noSpawn: true # debloat spawn menu
+  categories: [ HideSpawnMenu ] # debloat spawn menu
   id: LockerWallColorAme
   parent: LockerWallColorBase
   name: AME fuel wall locker
@@ -146,7 +146,7 @@
       map: ["enum.LockVisualLayers.Lock"]
 
 - type: entity
-  noSpawn: true # debloat spawn menu
+  categories: [ HideSpawnMenu ] # debloat spawn menu
   id: LockerWallColorBananium
   parent: LockerWallColorBase
   name: bananium fuel wall locker
@@ -171,7 +171,7 @@
       map: ["enum.LockVisualLayers.Lock"]
 
 - type: entity
-  noSpawn: true # debloat spawn menu
+  categories: [ HideSpawnMenu ] # debloat spawn menu
   id: LockerWallColorMaterials
   parent: LockerWallColorBase
   name: materials wall locker
