--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_aberrant_flesh.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_aberrant_flesh.yml
@@ -514,6 +514,9 @@
       state: jared
       scale: 0.8,0.8
       color: "maroon"
+    - sprite: _NF/Effects/wet.rsi
+      state: wet
+      color: "pink"
 
 - type: entity
   id: MobFleshJaredOldExpeditionsNewborn
@@ -528,6 +531,9 @@
       state: jared
       scale: 0.8,0.8
       color: "maroon"
+    - sprite: _NF/Effects/wet.rsi
+      state: wet
+      color: "pink"
 
 - type: entity
   id: MobFleshGolemExpeditionsNewborn
@@ -540,6 +546,9 @@
       state: golem
       scale: 0.8,0.8
       color: "maroon"
+    - sprite: _NF/Effects/wet.rsi
+      state: wet
+      color: "pink"
 
 - type: entity
   id: MobFleshGolemAltExpeditionsNewborn
@@ -552,6 +561,9 @@
       state: golem2
       scale: 0.8,0.8
       color: "maroon"
+    - sprite: _NF/Effects/wet.rsi
+      state: wet
+      color: "pink"
 
 - type: entity
   id: MobFleshGolemOldExpeditionsNewborn
@@ -566,6 +578,9 @@
       state: golem
       scale: 0.8,0.8
       color: "maroon"
+    - sprite: _NF/Effects/wet.rsi
+      state: wet
+      color: "pink"
 
 - type: entity
   id: MobFleshClampExpeditionsNewborn
@@ -578,6 +593,9 @@
       state: clamp
       scale: 0.8,0.8
       color: "maroon"
+    - sprite: _NF/Effects/wet.rsi
+      state: wet
+      color: "pink"
 
 - type: entity
   id: MobFleshClampOldExpeditionsNewborn
@@ -591,6 +609,9 @@
       state: clamp
       scale: 0.8,0.8
       color: "maroon"
+    - sprite: _NF/Effects/wet.rsi
+      state: wet
+      color: "pink"
 
 - type: entity
   id: MobFleshLoverExpeditionsNewborn
@@ -603,3 +624,6 @@
       state: lover
       scale: 0.8,0.8
       color: "maroon"
+    - sprite: _NF/Effects/wet.rsi
+      state: wet
+      color: "pink"
