--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_aberrant_flesh.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_aberrant_flesh.yml
@@ -403,8 +403,8 @@
       path: /Audio/Animals/space_dragon_roar.ogg
   - type: BasicEntityAmmoProvider
     proto: DartAberrantFleshHorrorSpikeSpread #DartAberrantFleshHorrorSpike
-    capacity: 3
-    count: 3
+    capacity: 2
+    count: 2
   - type: Gun
     minAngle: 5
     maxAngle: 15
@@ -421,7 +421,7 @@
   id: ActionBoneSpike
   categories: [ HideSpawnMenu ]
   name: "[color=yellow]Bone Spike[/color]"
-  description: Shoot a short salvo of bone spikes laced with toxins.
+  description: "Shoot a short salvo of bone spikes laced with toxins. [color=yellow]5 second cooldown.[/color]"
   components:
   - type: WorldTargetAction
     icon: { sprite : _NF/Mobs/Aliens/flesh.rsi, state: spike }
