--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/Containers/box.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/Containers/box.yml
@@ -211,3 +211,96 @@
     # Extra
 #    - id: FoodCondimentPacketPepper
     - id: FoodCondimentPacketSalt
+
+- type: entity
+  parent: FoodBoxNugget
+  id: FoodBoxSushi
+  name: sushi tray
+  description: Plastic sushi container with lid.
+  components:
+  - type: Sprite
+    sprite: _NF/Objects/Consumable/Food/sushi.rsi
+    state: tray
+    layers:
+    - state: tray
+    - state: tray-open
+      map: ["openLayer"]
+      visible: false
+    - state: tray1
+      map: ["tray1"]
+      visible: false
+    - state: tray2
+      map: ["tray2"]
+      visible: false
+    - state: tray3
+      map: ["tray3"]
+      visible: false
+    - state: tray4
+      map: ["tray4"]
+      visible: false
+    - state: tray5
+      map: ["tray5"]
+      visible: false
+    - state: tray6
+      map: ["tray6"]
+      visible: false
+  - type: Storage
+    grid:
+    - 0,0,1,2
+  - type: Item
+    sprite: _NF/Objects/Consumable/Food/sushi.rsi
+    scale: 0.8, 0.8
+  - type: StorageFill
+    contents:
+    # Slice1
+    - id: FoodMealGasSafeSushiSlice
+      orGroup: Slice1
+      prob: 0.5
+    - id: FoodMealGasBadSushiSlice
+      orGroup: Slice1
+      prob: 0.5
+    # Slice2
+    - id: FoodMealGasSafeSushiSlice
+      orGroup: Slice2
+      prob: 0.5
+    - id: FoodMealGasBadSushiSlice
+      orGroup: Slice2
+      prob: 0.5
+    # Slice3
+    - id: FoodMealGasSafeSushiSlice
+      orGroup: Slice3
+      prob: 0.5
+    - id: FoodMealGasBadSushiSlice
+      orGroup: Slice3
+      prob: 0.5
+    # Slice4
+    - id: FoodMealGasSafeSushiSlice
+      orGroup: Slice4
+      prob: 0.5
+    - id: FoodMealGasBadSushiSlice
+      orGroup: Slice4
+      prob: 0.5
+    # Slice5
+    - id: FoodMealGasSafeSushiSlice
+      orGroup: Slice5
+      prob: 0.5
+    - id: FoodMealGasBadSushiSlice
+      orGroup: Slice5
+      prob: 0.5
+    # Slice6
+    - id: FoodMealGasSafeSushiSlice
+      orGroup: Slice6
+      prob: 0.5
+    - id: FoodMealGasBadSushiSlice
+      orGroup: Slice6
+      prob: 0.5
+  - type: ItemCounter
+    count:
+      tags: [Sushi]
+    layerStates:
+    - tray1
+    - tray2
+    - tray3
+    - tray4
+    - tray5
+    - tray6
