Adds FSB Spirit poster and two EMS signs.

--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/posters.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/posters.yml
@@ -78,4 +78,5 @@
       - NFPosterContrabandFsbStasisDD
       - NFPosterContrabandFsbApothecaryDD
       - NFPosterContrabandFsbLogoDD
+      - NFPosterContrabandFsbSpiritDD
     chance: 1
