--- a/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/contraband.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/contraband.yml
@@ -335,3 +335,8 @@
   parent: [DeadDropBase, NFPosterContrabandFsbApothecary]
   id: NFPosterContrabandFsbApothecaryDD
   suffix: DeadDrop
+
+- type: entity
+  parent: [DeadDropBase, NFPosterContrabandFsbSpirit]
+  id: NFPosterContrabandFsbSpiritDD
+  suffix: DeadDrop
