--- a/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
@@ -67,3 +67,13 @@
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
     state: nf_poster6_contraband
+      
+- type: entity
+  parent: PosterBase
+  id: NFPosterContrabandFsbSpirit
+  name: "Far Star Biotech Spirit"
+  description: "The FSB Spirit! We know what your life is worth."
+  components:
+  - type: Sprite
+    sprite: _NF/Structures/Wallmounts/posters.rsi
+    state: nf_poster7_contraband
