--- a/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/signs.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/signs.yml
@@ -186,3 +186,21 @@
   components:
   - type: Sprite
     state: bus
+
+- type: entity
+  parent: NFBaseSign
+  id: NFSignEms1
+  name: emergency medical service sign
+  description: A sign that indicates emergency medical services.
+  components:
+  - type: Sprite
+    state: ems1
+
+- type: entity
+  parent: NFBaseSign
+  id: NFSignEms2
+  name: emergency medical service sign
+  description: A sign that indicates emergency medical services.
+  components:
+  - type: Sprite
+    state: ems2
