YAML/Fluent touch-ups

--- a/Resources/Prototypes/Catalog/Cargo/cargo_materials.yml
+++ b/Resources/Prototypes/Catalog/Cargo/cargo_materials.yml
@@ -59,7 +59,7 @@
     sprite: Objects/Materials/materials.rsi
     state: cloth_3
   product: CrateMaterialTextiles
-  cost: 1500
+  cost: 2000 # Frontier: 1500<2000
   category: cargoproduct-category-name-materials
   group: market
 
