--- a/Resources/Prototypes/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/Roles/Jobs/departments.yml
@@ -60,6 +60,7 @@
   - ERTSecurity
   - ERTEngineer
   - DeathSquad
+  - ERTMailCarrier # Frontier
   editorHidden: true
   weight: 120
 
@@ -88,6 +89,7 @@
   - StationRepresentative # Frontier
   - Sheriff  # Frontier
   - StationTrafficController # Frontier
+  - ERTMailCarrier # Frontier
   primary: false
   weight: 2 # Frontier: 100<2 - accounted for in jobs
 
