--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_base.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_base.yml
@@ -272,6 +272,8 @@
     - ForcedSleep
     - TemporaryBlindness
     - Pacified
+    - Drowsiness
+    - Adrenaline
   - type: Buckle
   - type: StandingState
   - type: InputMover
