mail handcuffs to zipties, restore tracking implnt

--- a/Resources/Prototypes/Entities/Objects/Misc/implanters.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/implanters.yml
@@ -158,7 +158,7 @@
 - type: entity
   id: TrackingImplanter
   parent: [ BaseImplantOnlyImplanter, BaseC2ContrabandUnredeemable] # Frontier: BaseRestrictedContraband<BaseC2ContrabandUnredeemable
-  # suffix: tracking # Frontier
+  suffix: tracking
   components:
     - type: Implanter
       implant: TrackingImplant
