--- a/Resources/Prototypes/_NF/Mail/mail.yml
+++ b/Resources/Prototypes/_NF/Mail/mail.yml
@@ -2088,7 +2088,7 @@
   components:
   - type: Mail
     contents:
-    - id: Handcuffs
+    - id: Zipties
     - id: ClothingMaskMuzzle
     - id: ClothingEyesBlindfold
 
