--- a/Resources/Prototypes/round_announcements.yml
+++ b/Resources/Prototypes/round_announcements.yml
@@ -1,3 +1,3 @@
 - type: roundAnnouncement
   id: Welcome
-  sound: /Audio/Announcements/welcome.ogg
+  sound: _NF/Audio/Announcements/welcome.ogg # Frontier
