Revert shield value change, label mail chems

--- a/Resources/Prototypes/Entities/Objects/Shields/shields.yml
+++ b/Resources/Prototypes/Entities/Objects/Shields/shields.yml
@@ -58,7 +58,7 @@
                   min: 2
                   max: 2
     - type: StaticPrice
-      price: 100
+      price: 50 # Frontier: 100<50 - TODO: material value rework
 
 #Security Shields
 
