--- a/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/contraband.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/contraband.yml
@@ -340,3 +340,8 @@
   parent: [DeadDropBase, NFPosterContrabandFsbSpirit]
   id: NFPosterContrabandFsbSpiritDD
   suffix: DeadDrop
+  
+- type: entity
+  parent: [DeadDropBase, NFPosterContrabandFsbSpirit]
+  id: NFPosterContrabandEmsCoordsDD
+  suffix: DeadDrop
