--- a/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
@@ -77,3 +77,13 @@
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
     state: nf_poster7_contraband
+            
+- type: entity
+  parent: PosterBase
+  id: NFPosterContrabandEmsCoords
+  name: "EMS Suit Coordinates Reminder"
+  description: "Rosy the Medicroach reminding you to turn your suit coordinates! Make sure your next death isn't your last!"
+  components:
+  - type: Sprite
+    sprite: _NF/Structures/Wallmounts/posters.rsi
+    state: nf_poster8_contraband
