--- a/Resources/Prototypes/Entities/Mobs/NPCs/carp.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/carp.yml
@@ -83,6 +83,7 @@
 - type: entity
   parent: BaseMobCarp
   id: MobCarp
+  categories: [ HideSpawnMenu ] # Frontier
   components:
   - type: Sprite
     layers:
@@ -103,6 +104,7 @@
   parent: BaseMobCarp
   id: MobCarpMagic
   description: Looks like some kind of fish. Might be magical.
+  categories: [ HideSpawnMenu ] # Frontier
   components:
     - type: Sprite
       sprite: Mobs/Aliens/Carps/magic.rsi
@@ -114,6 +116,7 @@
   parent: BaseMobCarp
   id: MobCarpHolo
   description: Carp made out of holographic energies. Sadly for you, it is very much real.
+  categories: [ HideSpawnMenu ] # Frontier
   components:
     - type: Sprite
       sprite: Mobs/Aliens/Carps/holo.rsi
@@ -137,6 +140,7 @@
   id: MobCarpRainbow
   name: rainbow carp
   description: Wow such a shiny fishie!
+  categories: [ HideSpawnMenu ] # Frontier
   components:
   - type: PointLight
     radius: 1.5
@@ -156,6 +160,7 @@
   id: MobCarpDragon
   suffix: DragonBrood
   parent: MobCarp
+  categories: [ HideSpawnMenu ] # Frontier
   components:
     - type: GhostRole
       allowMovement: true
@@ -175,6 +180,7 @@
   id: MobCarpDungeon
   parent: MobCarp
   suffix: Dungeon
+  categories: [ HideSpawnMenu ] # Frontier
   components:
   - type: MeleeWeapon
     damage:
@@ -186,6 +192,7 @@
   parent: BaseMobCarp
   id: MobShark
   description: A dangerous shark from the blackness of endless space, who loves to drink blood.
+  categories: [ HideSpawnMenu ] # Frontier
   components:
     - type: Sprite
       sprite: Mobs/Aliens/Carps/sharkminnow.rsi
@@ -237,5 +244,6 @@
   id: MobSharkSalvage
   parent: MobShark
   suffix: "Salvage Ruleset"
+  categories: [ HideSpawnMenu ] # Frontier
   components:
     - type: NFSalvageMobRestrictions
