--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_carp.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/mob_hostile_expeditions_carp.yml
@@ -1,24 +1,13 @@
 # BASE
 - type: entity
-  parent:
-  - MobNonHumanHostileBase
   id: BaseMobCarpExpeditions
   name: carp
+  parent:
+  - MobNonHumanHostileBase
+  - MobHumanoidHostileAISimpleMelee
   description: A variant of the common space carp, evolved to "swim" through gravity. Equally dangerous.
   abstract: true
   components:
-  - type: HTN
-    rootTask:
-       task: SimpleHostileCompound
-    blackboard:
-      NavClimb: !type:Bool
-        false
-      NavInteract: !type:Bool
-        true
-      NavPry: !type:Bool
-        true
-      NavSmash: !type:Bool
-        true
   - type: NpcFactionMember
     factions:
     - SimpleHostile
@@ -35,7 +24,6 @@
     spawned:
     - id: FoodMeatFish
       amount: 2
-  - type: MobState
   - type: MobThresholds # Base value to fall back to
     thresholds:
       0: Alive
@@ -44,8 +32,6 @@
     speedModifierThresholds:
       30: 0.7
       40: 0.5
-  - type: Stamina
-    critThreshold: 100
   - type: DamageStateVisuals
     states:
       Alive:
@@ -59,7 +45,7 @@
       fix1:
         shape:
           !type:PhysShapeCircle
-          radius: 0.40 # Lowered the value, to allow them to fit through the airlocks
+          radius: 0.35 # Lowered the value, to allow them to fit through the airlocks
         density: 100
         mask:
           - FlyingMobMask
@@ -70,7 +56,6 @@
     - Carp
     - DoorBumpOpener
   - type: MeleeWeapon
-    altDisarm: false
     angle: 0
     animation: WeaponArcBite
     soundHit:
@@ -85,8 +70,8 @@
 
 # VARIATIONS
 - type: entity
-  parent: BaseMobCarpExpeditions
   id: MobCarpExpeditions
+  parent: BaseMobCarpExpeditions
   components:
   - type: Sprite
     layers:
@@ -103,9 +88,9 @@
         mouth: ""
 
 - type: entity
-  parent: BaseMobCarpExpeditions
   id: MobCarpMagicExpeditions
   name: magicarp
+  parent: BaseMobCarpExpeditions
   description: A lesser version of spaceproof giant carp believed to have magic powers. Contrary to popular belief, does not possess magical abilities.
   components:
   - type: Sprite
@@ -114,9 +99,9 @@
     proto: guardian
 
 - type: entity
-  parent: BaseMobCarpExpeditions
   id: MobCarpHoloExpeditions
   name: holocarp
+  parent: BaseMobCarpExpeditions
   description: Carp made out of holographic energies. Sadly for you, it is very much real.
   components:
   - type: Sprite
@@ -137,9 +122,9 @@
     proto: robot
 
 - type: entity
-  parent: BaseMobCarpExpeditions
   id: MobCarpRainbowExpeditions
   name: rainbow carp
+  parent: BaseMobCarpExpeditions
   description: |- 
    "Wow such a shiny fishie!" you might say. Reasonable, but these are deadly nonetheless.
   components:
@@ -150,9 +135,9 @@
     layers: [ 0 ]
 
 - type: entity
-  parent: BaseMobCarpExpeditions
   id: MobSharkExpeditions
   name: sharkminnow
+  parent: BaseMobCarpExpeditions
   description: A dangerous shark from the blackness of endless space, who loves to drink blood.
   components:
   - type: Sprite
@@ -185,3 +170,56 @@
       types:
         Slash: 7
         Bloodloss: 5
+
+# Snake
+- type: entity
+  id: MobSnakeExpeditions
+  name: snake
+  parent: BaseMobCarpExpeditions
+  description: A small but menacing poisonous snake, distant relative of purple snake from Kepler-283c.
+  components:
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeCircle
+          radius: 0.35
+        density: 100
+        mask:
+        - SmallMobMask
+        layer:
+        - SmallMobLayer # Should allow snakes to pass under the tables
+  - type: Sprite
+    drawdepth: SmallMobs
+    sprite: _NF/Mobs/Aliens/snake.rsi
+  - type: RandomSprite
+    available:
+    - enum.DamageStateVisualLayers.Base:
+        alive: Rainbow
+      enum.DamageStateVisualLayers.BaseUnshaded:
+        mouth: ""
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatSnake
+      amount: 4
+  - type: MeleeWeapon
+    angle: 0
+    animation: WeaponArcBite
+    damage:
+      types:
+        Piercing: 3
+        Slash: 3
+        Structural: 20
+  - type: SolutionContainerManager
+    solutions:
+      melee:
+        reagents:
+        - ReagentId: Toxin
+          Quantity: 50
+  - type: MeleeChemicalInjector
+    solution: melee
+  - type: SolutionTransfer
+    maxTransferAmount: 1
+  - type: FootstepModifier
+    footstepSoundCollection:
+      collection: FootstepSnake
