dragon ghost role rules update

--- a/Resources/Prototypes/Entities/Mobs/Player/dragon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/dragon.yml
@@ -191,7 +191,7 @@
   components:
   - type: GhostRole
     description: ghost-role-information-space-dragon-dungeon-description
-    rules: ghost-role-information-space-dragon-dungeon-rules
+    rules: ghost-role-information-dungeon-boss-rules # Frontier: ghost-role-information-space-dragon-dungeon-rules<ghost-role-information-dungeon-boss-rules
     raffle:
       settings: default
   - type: SlowOnDamage
