sentient crates, mat cleanup, computer jank, migr

--- a/Resources/Prototypes/Research/industrial.yml
+++ b/Resources/Prototypes/Research/industrial.yml
@@ -11,6 +11,7 @@
   cost: 7500
   recipeUnlocks:
   - MiningDrill
+  - WeaponGrapplingGun # Frontier
   - MineralScannerEmpty
   - BorgModuleMining
   - BorgModuleGrapplingGun
