--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -398,8 +398,8 @@ SignHydro3: SignHydro1
 LogicGate: LogicGateOr
 
 # 2024-08-08
-MaterialReclaimer: null
-MaterialReclaimerMachineCircuitboard: null
+# MaterialReclaimer: null # Frontier
+# MaterialReclaimerMachineCircuitboard: null # Frontier
 
 # 2024-08-11
 FoodTacoBeef: FoodTacoShell
