--- a/Resources/Prototypes/Entities/Objects/base_contraband.yml
+++ b/Resources/Prototypes/Entities/Objects/base_contraband.yml
@@ -44,7 +44,7 @@
   abstract: true
   components:
   - type: Contraband
-    allowedDepartments: [ Command, CentralCommand ] # Frontier: added CentralCommand
+    allowedDepartments: [ Command ]
 
 # - type: entity
 #   id: BaseSecurityContraband
