--- a/Resources/Prototypes/Entities/Structures/Storage/filing_cabinets.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/filing_cabinets.yml
@@ -58,8 +58,8 @@
           SheetSteel1:
             min: 1
             max: 2
-  - type: StaticPrice
-    price: 80
+  # - type: StaticPrice # Frontier: TODO - material value rework
+  #   price: 80 # Frontier
   - type: Construction
     graph: FilingCabinet
 
