--- a/Resources/Prototypes/Entities/Structures/Windows/window.yml
+++ b/Resources/Prototypes/Entities/Structures/Windows/window.yml
@@ -238,8 +238,8 @@
   - type: Icon
     sprite: Structures/Windows/directional.rsi
     state: frosted_window
-  - type: StaticPrice
-    price: 35
+  # - type: StaticPrice # Frontier
+  #   price: 35 # Frontier
 
 - type: entity
   parent: Window
