--- a/Resources/Prototypes/_NF/Entities/Objects/base_contraband.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/base_contraband.yml
@@ -29,7 +29,7 @@
   - type: Contraband
     severity: Class2
     # Security and heads only (finally, shotgun traffic controller)
-    allowedDepartments: [ Security, Command, CentralCommand ]
+    allowedDepartments: [ Security, Command ]
     turnInValues: {} # TODO: pirate values?
 
 - type: entity
