--- a/Resources/Prototypes/_NF/Entities/World/Debris/asteroids.yml
+++ b/Resources/Prototypes/_NF/Entities/World/Debris/asteroids.yml
@@ -1,4 +1,5 @@
-﻿- type: entity
+﻿# Asteroid types & loot tables
+- type: entity
   id: NFBaseAsteroidDebris
   parent: NFBaseDebris
   abstract: true
@@ -417,6 +418,7 @@
     - type: IFF
       color: "#BF8C5C"
 
+# Concrete asteroids (Base type)
 - type: entity
   id: NFAsteroidDebrisSmall
   parent: NFBaseAsteroidDebris
@@ -537,6 +539,7 @@
       floorPlacements: 324
       radius: 28
 
+# Ice asteroids
 - type: entity
   id: NFAsteroidIceDebrisSmall
   parent: [NFBaseAsteroidIceDebris, NFAsteroidDebrisSmall]
@@ -597,6 +600,7 @@
   parent: [NFBaseAsteroidIceDebris, NFAsteroidDebrisExtraGigantic]
   categories: [ HideSpawnMenu ]
 
+# Andesite asteroids
 - type: entity
   id: NFAsteroidAndesiteDebrisSmall
   parent: [NFBaseAsteroidAndesiteDebris, NFAsteroidDebrisSmall]
@@ -657,6 +661,7 @@
   parent: [NFBaseAsteroidAndesiteDebris, NFAsteroidDebrisExtraGigantic]
   categories: [ HideSpawnMenu ]
 
+# Basalt asteroids
 - type: entity
   id: NFAsteroidBasaltDebrisSmall
   parent: [NFBaseAsteroidBasaltDebris, NFAsteroidDebrisSmall]
@@ -717,6 +722,7 @@
   parent: [NFBaseAsteroidBasaltDebris, NFAsteroidDebrisExtraGigantic]
   categories: [ HideSpawnMenu ]
 
+# Sand asteroids
 - type: entity
   id: NFAsteroidSandDebrisSmall
   parent: [NFBaseAsteroidSandDebris, NFAsteroidDebrisSmall]
@@ -777,6 +783,7 @@
   parent: [NFBaseAsteroidSandDebris, NFAsteroidDebrisExtraGigantic]
   categories: [ HideSpawnMenu ]
 
+# Chromite asteroids
 - type: entity
   id: NFAsteroidChromiteDebrisSmall
   parent: [NFBaseAsteroidChromiteDebris, NFAsteroidDebrisSmall]
@@ -837,6 +844,7 @@
   parent: [NFBaseAsteroidChromiteDebris, NFAsteroidDebrisExtraGigantic]
   categories: [ HideSpawnMenu ]
 
+# Rock asteroids
 - type: entity
   id: NFAsteroidRockDebrisSmall
   parent: [NFBaseAsteroidRockDebris, NFAsteroidDebrisSmall]
