--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/material_reclaimer.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/material_reclaimer.yml
@@ -85,6 +85,8 @@
         volume: 5
         maxDistance: 5
         loop: true
+    useOldSolutionLogic: true
+    solutionContainerId: output
   - type: MaterialStorage
     insertOnInteract: false
   - type: ContainerContainer
