Radar IFF range & coordinate hiding for ghosts

--- a/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
@@ -69,6 +69,8 @@
   - type: RadarConsole
     maxRange: 1024 # Frontier: increase admin radar range
     followEntity: true
+    hideCoords: false # Frontier
+    maxIffRange: null # Frontier
   - type: CargoOrderConsole
   - type: BankClient
   - type: CrewMonitoringConsole
