--- a/Resources/Prototypes/Entities/Mobs/Player/observer.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/observer.yml
@@ -71,6 +71,8 @@
         toggleAction: ActionObserverShowRadar
   - type: RadarConsole
     followEntity: true
+    maxIffRange: 256
+    hideCoords: true
   - type: ComplexInteraction # Needed to interact with innate radar console
   # End Frontier
 
