map changes, obj edits

--- a/Resources/Prototypes/Objectives/stealTargetGroups.yml
+++ b/Resources/Prototypes/Objectives/stealTargetGroups.yml
@@ -42,12 +42,12 @@
     sprite: Clothing/Shoes/Boots/magboots-advanced.rsi
     state: icon
 
-- type: stealTargetGroup
-  id: BoxFolderQmClipboard
-  name: requisition digi-board
-  sprite:
-    sprite: Objects/Misc/qm_clipboard.rsi
-    state: qm_clipboard
+#- type: stealTargetGroup
+#  id: BoxFolderQmClipboard
+#  name: requisition digi-board
+#  sprite:
+#    sprite: Objects/Misc/qm_clipboard.rsi
+#    state: qm_clipboard
 
 # - type: stealTargetGroup // RA
   # id: FoodMeatCorgi
@@ -221,26 +221,26 @@
     sprite: Objects/Devices/flatpack.rsi
     state: ame-part
 
-- type: stealTargetGroup
-  id: SalvageExpeditionsComputerCircuitboard
-  name: salvage expeditions computer board
-  sprite:
-    sprite: Objects/Misc/module.rsi
-    state: cpu_supply
+#- type: stealTargetGroup
+#  id: SalvageExpeditionsComputerCircuitboard
+#  name: salvage expeditions computer board
+#  sprite:
+#    sprite: Objects/Misc/module.rsi
+#    state: cpu_supply
 
-- type: stealTargetGroup
-  id: CargoShuttleConsoleCircuitboard
-  name: cargo shuttle console board
-  sprite:
-    sprite: Objects/Misc/module.rsi
-    state: cpuboard
+#- type: stealTargetGroup
+#  id: CargoShuttleConsoleCircuitboard
+#  name: cargo shuttle console board
+#  sprite:
+#    sprite: Objects/Misc/module.rsi
+#    state: cpuboard
 
-- type: stealTargetGroup
-  id: SalvageShuttleConsoleCircuitboard
-  name: salvage shuttle console board
-  sprite:
-    sprite: Objects/Misc/module.rsi
-    state: cpuboard
+#- type: stealTargetGroup
+#  id: SalvageShuttleConsoleCircuitboard
+#  name: salvage shuttle console board
+#  sprite:
+#    sprite: Objects/Misc/module.rsi
+#    state: cpuboard
 
 - type: stealTargetGroup
   id: ClothingEyesHudBeer
@@ -270,12 +270,12 @@
     sprite: Clothing/Neck/Medals/clownmedal.rsi
     state: icon
 
-- type: stealTargetGroup
-  id: ClothingNeckShockCollar
-  name: shock collar
-  sprite:
-    sprite: Clothing/Neck/Misc/shock_collar.rsi
-    state: icon
+#- type: stealTargetGroup
+#  id: ClothingNeckShockCollar
+#  name: shock collar
+#  sprite:
+#    sprite: Clothing/Neck/Misc/shock_collar.rsi
+#    state: icon
 
 #Thief structures
 
@@ -293,12 +293,12 @@
     sprite: Structures/Machines/fax_machine.rsi
     state: icon
 
-- type: stealTargetGroup
-  id: VehicleSecway
-  name: secway
-  sprite:
-    sprite: Objects/Vehicles/secway.rsi
-    state: icon
+#- type: stealTargetGroup
+#  id: VehicleSecway
+#  name: secway
+#  sprite:
+#    sprite: Objects/Vehicles/secway.rsi
+#    state: icon
 
 - type: stealTargetGroup
   id: ChemDispenser
@@ -349,67 +349,67 @@
     sprite: Structures/Furniture/potted_plants.rsi
     state: plant-25
 
-- type: stealTargetGroup
-  id: ToiletGoldenDirtyWater
-  name: golden toilet
-  sprite:
-    sprite: Structures/Furniture/golden_toilet.rsi
-    state: condisposal
+#- type: stealTargetGroup
+#  id: ToiletGoldenDirtyWater
+#  name: golden toilet
+#  sprite:
+#    sprite: Structures/Furniture/golden_toilet.rsi
+#    state: condisposal
 
 # Thief Animal
 
-- type: stealTargetGroup
-  id: AnimalIan
-  name: Ian
-  sprite:
-    sprite: Mobs/Pets/corgi.rsi
-    state: ian
+#- type: stealTargetGroup
+#  id: AnimalIan
+#  name: Ian
+#  sprite:
+#    sprite: Mobs/Pets/corgi.rsi
+#    state: ian
 
-- type: stealTargetGroup
-  id: AnimalNamedCat
-  name: CMO's Cat
-  sprite:
-    sprite: Mobs/Pets/bingus.rsi
-    state: bingus
+#- type: stealTargetGroup
+#  id: AnimalNamedCat
+#  name: CMO's Cat
+#  sprite:
+#    sprite: Mobs/Pets/bingus.rsi
+#    state: bingus
 
-- type: stealTargetGroup
-  id: AnimalMcGriff
-  name: McGriff
-  sprite:
-    sprite: Mobs/Pets/mcgriff.rsi
-    state: mcgriff
+#- type: stealTargetGroup
+#  id: AnimalMcGriff
+#  name: McGriff
+#  sprite:
+#    sprite: Mobs/Pets/mcgriff.rsi
+#    state: mcgriff
 
-- type: stealTargetGroup
-  id: AnimalWalter
-  name: Walter
-  sprite:
-    sprite: Mobs/Pets/walter.rsi
-    state: walter
+#- type: stealTargetGroup
+#  id: AnimalWalter
+#  name: Walter
+#  sprite:
+#    sprite: Mobs/Pets/walter.rsi
+#    state: walter
 
-- type: stealTargetGroup
-  id: AnimalMorty
-  name: Morty
-  sprite:
-    sprite: Mobs/Animals/possum.rsi
-    state: possum
+#- type: stealTargetGroup
+#  id: AnimalMorty
+#  name: Morty
+#  sprite:
+#    sprite: Mobs/Animals/possum.rsi
+#    state: possum
 
-- type: stealTargetGroup
-  id: AnimalRenault
-  name: Renault
-  sprite:
-    sprite: Mobs/Animals/fox.rsi
-    state: fox
+#- type: stealTargetGroup
+#  id: AnimalRenault
+#  name: Renault
+#  sprite:
+#    sprite: Mobs/Animals/fox.rsi
+#    state: fox
 
-- type: stealTargetGroup
-  id: AnimalShiva
-  name: Shiva
-  sprite:
-    sprite: Mobs/Pets/shiva.rsi
-    state: shiva
+#- type: stealTargetGroup
+#  id: AnimalShiva
+#  name: Shiva
+#  sprite:
+#    sprite: Mobs/Pets/shiva.rsi
+#    state: shiva
 
-- type: stealTargetGroup
-  id: AnimalTropico
-  name: Tropico
-  sprite:
-    sprite: Mobs/Animals/crab.rsi
-    state: crab
+#- type: stealTargetGroup
+#  id: AnimalTropico
+#  name: Tropico
+#  sprite:
+#    sprite: Mobs/Animals/crab.rsi
+#    state: crab
