--- a/Resources/Prototypes/Objectives/objectiveGroups.yml
+++ b/Resources/Prototypes/Objectives/objectiveGroups.yml
@@ -16,8 +16,8 @@
     RDHardsuitStealObjective: 1
     NukeDiskStealObjective: 1
     MagbootsStealObjective: 1
-    CorgiMeatStealObjective: 1
-    ClipboardStealObjective: 1
+#    CorgiMeatStealObjective: 1
+#    ClipboardStealObjective: 1
     CaptainGunStealObjective: 0.5
     CaptainJetpackStealObjective: 0.5
     HandTeleporterStealObjective: 0.5
@@ -73,15 +73,15 @@
     ForensicScannerStealObjective: 1                    #sec
     FlippoEngravedLighterStealObjective: 0.5
     ClothingHeadHatWardenStealObjective: 1
-    ClothingNeckShockCollarStealObjective: 1
+#    ClothingNeckShockCollarStealObjective: 1
     ClothingOuterHardsuitVoidParamedStealObjective: 1   #med
     MedicalTechFabCircuitboardStealObjective: 1
     ClothingHeadsetAltMedicalStealObjective: 1
     FireAxeStealObjective: 1                            #eng
     AmePartFlatpackStealObjective: 1
-    ExpeditionsCircuitboardStealObjective: 1            #sup
-    CargoShuttleCircuitboardStealObjective: 1
-    SalvageShuttleCircuitboardStealObjective: 1
+#    ExpeditionsCircuitboardStealObjective: 1            #sup
+#    CargoShuttleCircuitboardStealObjective: 1
+#    SalvageShuttleCircuitboardStealObjective: 1
     ClothingEyesHudBeerStealObjective: 1                #srv
     BibleStealObjective: 1
     ClothingNeckGoldmedalStealObjective: 1              #other
@@ -99,19 +99,19 @@
     BoozeDispenserStealObjective: 1
     AltarNanotrasenStealObjective: 1
     PlantRDStealObjective: 1
-    ToiletGoldenStealObjective: 1
+#    ToiletGoldenStealObjective: 1
 
-- type: weightedRandom
-  id: ThiefObjectiveGroupAnimal
-  weights:
-    IanStealObjective: 1
-    BingusStealObjective: 1
-    McGriffStealObjective: 1
-    WalterStealObjective: 1
-    MortyStealObjective: 1
-    RenaultStealObjective: 1
-    ShivaStealObjective: 1
-    TropicoStealObjective: 1
+#- type: weightedRandom
+#  id: ThiefObjectiveGroupAnimal
+#  weights:
+#    IanStealObjective: 1
+#    BingusStealObjective: 1
+#    McGriffStealObjective: 1
+#    WalterStealObjective: 1
+#    MortyStealObjective: 1
+#    RenaultStealObjective: 1
+#    ShivaStealObjective: 1
+#    TropicoStealObjective: 1
 
 - type: weightedRandom
   id: ThiefObjectiveGroupEscape
