Replaces hydroponic tray with anchored variant.

--- a/Resources/Maps/_NF/Shuttles/honker.yml
+++ b/Resources/Maps/_NF/Shuttles/honker.yml
@@ -1073,12 +1073,11 @@ entities:
     - type: Transform
       pos: 2.5,0.5
       parent: 2
-- proto: hydroponicsTray
+- proto: hydroponicsTrayAnchored
   entities:
   - uid: 75
     components:
     - type: Transform
-      rot: -1.5707963267948966 rad
       pos: -0.5,11.5
       parent: 2
 - proto: LampBanana
