Hauler: add guidebook entry

--- a/Resources/Prototypes/_NF/Guidebook/shipyard.yml
+++ b/Resources/Prototypes/_NF/Guidebook/shipyard.yml
@@ -21,6 +21,7 @@
   - ShipyardGasbender
   - ShipyardGourd
   - ShipyardHammer
+  - ShipyardHauler
   - ShipyardHarbormaster
   - ShipyardInvestigator
   - ShipyardKestrel
