--- a/Resources/Prototypes/_NF/Shipyard/hauler.yml
+++ b/Resources/Prototypes/_NF/Shipyard/hauler.yml
@@ -6,7 +6,7 @@
   category: Medium
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/hauler.yml
-  guidebookPage: Null
+  guidebookPage: ShipyardHauler
   class:
   - Cargo
   - Salvage
