Hauler guidebook entry

--- a/Resources/Prototypes/_NF/Guidebook/shipyard.yml
+++ b/Resources/Prototypes/_NF/Guidebook/shipyard.yml
@@ -131,6 +131,11 @@
   text: "/ServerInfo/_NF/Guidebook/Shipyard/Hammer.xml"
 
 - type: guideEntry
+  id: ShipyardHauler
+  name: guide-entry-shipyard-hauler
+  text: "/ServerInfo/_NF/Guidebook/Shipyard/Hauler.xml"
+
+- type: guideEntry
   id: ShipyardInvestigator
   name: guide-entry-shipyard-investigator
   text: "/ServerInfo/_NF/Guidebook/Shipyard/Investigator.xml"
