--- a/Resources/Prototypes/Research/civilianservices.yml
+++ b/Resources/Prototypes/Research/civilianservices.yml
@@ -17,6 +17,8 @@
   - HydroponicsTrayMachineCircuitboard
   - ReagentGrinderIndustrialMachineCircuitboard
   - PlantAnalyzer # Frontier
+  - BlueprintPlantAnalyzerEmptyNF # Frontier
+  - BlueprintPlantBagOfHoldingNF # Frontier
 
 - type: technology
   id: CritterMechs
@@ -177,6 +179,7 @@
   recipeUnlocks:
   - AdvMopItem
   - MegaSprayBottle
+  - BlueprintAdvMopItemNF # Frontier
 
 - type: technology
   id: HONKMech
@@ -250,3 +253,6 @@
   - BluespaceBeaker
   - SyringeBluespace
   - VialBluespace # Frontier
+  - BlueprintBluespaceBeakerNF # Frontier
+  - BlueprintSyringeBluespaceNF # Frontier
+  - BlueprintVialBluespaceNF # Frontier
