--- a/Resources/Prototypes/Research/experimental.yml
+++ b/Resources/Prototypes/Research/experimental.yml
@@ -137,6 +137,7 @@
   cost: 7500
   recipeUnlocks:
   - RPED
+  - BlueprintRpedNF # Frontier
 
 # - type: technology
   # id: DeterrenceTechnologies
