--- a/Resources/Prototypes/Research/industrial.yml
+++ b/Resources/Prototypes/Research/industrial.yml
@@ -173,6 +173,9 @@
     - UtilityBeltChiefEngineer
     - BorgModuleAdvancedTool
     - BorgModuleRCD
+    - BlueprintPowerDrillNF # Frontier
+    - BlueprintJawsOfLifeNF # Frontier
+    - BlueprintWelderExperimentalNF # Frontier
 
 - type: technology
   id: MassExcavation
@@ -187,6 +190,9 @@
     - OreBagOfHolding
     - MiningDrillDiamond
     - AdvancedMineralScannerEmpty
+    - BlueprintOreBagOfHoldingNF # Frontier
+    - BlueprintMiningDrillDiamondNF # Frontier
+    - BlueprintAdvancedMineralScannerEmptyNF # Frontier
 
 # Tier 3
 
@@ -204,6 +210,10 @@
   - ClothingBackpackSatchelHolding
   - ClothingBackpackDuffelHolding
   - ClothingBackpackMessengerHolding # Frontier
+  - BlueprintClothingBackpackHoldingNF # Frontier
+  - BlueprintClothingBackpackSatchelHoldingNF # Frontier
+  - BlueprintClothingBackpackDuffelHoldingNF # Frontier
+  - BlueprintClothingBackpackMessengerHoldingNF # Frontier
 
 - type: technology
   id: PortableFission
@@ -216,6 +226,7 @@
   cost: 10000
   recipeUnlocks:
   - PowerCellMicroreactor
+  - BlueprintPowerCellMicroreactorNF # Frontier
   technologyPrerequisites:
   - AdvancedPowercells
 
@@ -229,5 +240,6 @@
   tier: 2
   cost: 10000
   recipeUnlocks:
-    - ShipyardRCD
-    - ShipyardRCDAmmo
+    - ShipyardRCD # Frontier
+    - ShipyardRCDAmmo # Frontier
+    - BlueprintShipyardRCDAmmoNF # Frontier
