--- a/Resources/Prototypes/_NF/Research/experimental.yml
+++ b/Resources/Prototypes/_NF/Research/experimental.yml
@@ -13,6 +13,9 @@
   - SuperCapacitorStockPart
   - SuperMatterBinStockPart
   - PicoManipulatorStockPart
+  - BlueprintSuperCapacitorStockPartNF
+  - BlueprintPicoManipulatorStockPartNF
+  - BlueprintSuperMatterBinStockPartNF
 
 - type: technology
   id: MagnetsTechAdvanced
@@ -25,6 +28,7 @@
   cost: 10000
   recipeUnlocks:
   - ClothingShoesBootsMagAdv
+  - BlueprintClothingShoesBootsMagAdvNF
   technologyPrerequisites:
   - MagnetsTech
 
