--- a/Resources/Prototypes/_NF/Research/industrial.yml
+++ b/Resources/Prototypes/_NF/Research/industrial.yml
@@ -11,6 +11,7 @@
   cost: 5000
   recipeUnlocks:
   - ConstructionBagOfHolding
+  - BlueprintConstructionBagOfHoldingNF
 
 - type: technology
   id: HardsuitsBasic
@@ -78,5 +79,6 @@
     - ClothingOuterHardsuitMaximPrototype
     - ClothingHeadHelmetAncient
     - ClothingOuterHardsuitAncientEVA
+    - BlueprintClothingOuterHardsuitMaximPrototypeNF
   technologyPrerequisites:
   - HardsuitsAdvanced
