--- a/Resources/Prototypes/Research/arsenal.yml
+++ b/Resources/Prototypes/Research/arsenal.yml
@@ -124,6 +124,7 @@
   - FlashPayload
   - ExplosivePayload
   - ChemicalPayload
+  - BlueprintSignallerAdvancedNF # Frontier
 
 - type: technology
   id: SpecialMeans
@@ -197,9 +198,11 @@
   tier: 3
   cost: 15000
   recipeUnlocks:
-  - WeaponAntiqueLaserNF # Frontier
   - WeaponAdvancedLaser
   - PortableRecharger
+  - WeaponAntiqueLaserNF # Frontier
+  - BlueprintWeaponAntiqueLaser # Frontier
+  - BlueprintPortableRechargerNF # Frontier
 
 - type: technology
   id: ExperimentalBatteryAmmo
@@ -212,6 +215,7 @@
   cost: 15000
   recipeUnlocks:
   - WeaponLaserSvalinn
+  - BlueprintWeaponLaserSvalinn # Frontier
 
 - type: technology
   id: AdvancedShuttleWeapon
